# serializer version: 1
# name: test_setup_platform[botched][button.evohome_3933910_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:water-boiler-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.evohome_3933910_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_bathroom_dn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Bathroom Dn',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_bathroom_dn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_dead_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Dead Zone',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_dead_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_front_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Front Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_front_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_kids_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Kids Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_kids_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Kitchen',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_main_bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Main Bedroom',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_main_bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Main Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.reset_my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset My Home',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.evohome_3933910_reset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:water-boiler-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.evohome_3933910_reset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_bathroom_dn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Bathroom Dn',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_bathroom_dn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_dead_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Dead Zone',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_dead_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_front_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Front Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_front_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_kids_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Kids Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_kids_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Kitchen',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_main_bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Main Bedroom',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_main_bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Main Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset My Home',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.reset_spare_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Spare Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_spare_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h032585][button.reset_my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset My Home',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h032585][button.reset_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset THERMOSTAT',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.reset_my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset My Home',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.reset_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset THERMOSTAT',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.reset_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset THERMOSTAT',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.reset_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Thermostat',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.reset_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Thermostat 2',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.reset_vr-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Vr**********',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_vr',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_ba-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Ba******',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_ba',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_ka-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Ka*********',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_ka',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_ka_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Ka*****',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_ka_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_kl-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Kl********',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_kl',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_sl-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Sl********',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_sl',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.reset_wo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Wo*******',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_wo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[minimal][button.reset_main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Main Room',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[minimal][button.reset_my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset My Home',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[sys_004][button.reset_living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Living room',
      'icon': 'mdi:thermostat-box-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[sys_004][button.reset_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Reset Thermostat',
      'icon': 'mdi:thermostat-auto',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.reset_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
